web/styles/style.css
/* ... */
div.problem-explanation {
    font-size: 0.75rem;
    text-align: center;
    font-style: italic;
}

div.problem-stats-link {
    font-size: smaller;
    margin-top: -1.5rem;
    margin-right: 0.25rem;
    text-align: right;
}

div.problem-stats-field {
    display: inline-block;
    text-align: center;
    margin: 1rem;
}

div.problem-stats-field-circle {
    width: 5rem;
    height: 5rem;
    font-weight: bold;
    line-height: 5rem;
    border-radius: 2.5rem;
    text-align: center;
    color: #FFFFFF;
    background-color: #0099FF;
    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.24);
 }

div.problem-stats-field-label {
    font-size: smaller;
}

table.problem-sample {
    width: 100%;
    border-spacing: 0;
    border-collapse: collapse;
    white-space: pre-wrap;
    margin-top: 1rem;
    margin-bottom: 0.0625rem;
}

table.problem-sample tr th {
    font-weight: bold;
    width: 50%;
    max-width: 50%;
}

table.problem-sample tr td {
    font-family: "Consolas", "Ubuntu Mono", "Courier New", monospace;
    vertical-align: top;
    font-size: 0.8125rem;
    width: 50%;
    max-width: 50%;
}

table.problem-sample tr td, table.problem-sample tr th {
    padding: 0.25rem 0.5rem;
    page-break-inside: avoid;
    border: 0.0625rem solid #666666;
}

table.register {
    width: 100%;
    font-size: 1rem;
    border-spacing: 0;
    border-collapse: collapse;
}

table.register tr td.left {
    width: 50%;
    text-align: right;
    padding-right: 0.125rem;
}

table.register tr td.right {
    width: 50%;
    text-align: left;
    padding-left: 0.125rem;
}

input.text {
    height: 1.6rem;
    padding: 0.125rem 0.3125rem;
    margin: 0.0625rem 0;
    border: 0.0625rem solid #888888;
    border-radius: 0.1875rem;
}

input.text:focus {
    box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.24);
}

form.login {
    margin-top: 1rem;
}

form.register {
    margin-top: 1rem;
}

div.input-wrapper {
    text-align: center;
}

input.button {
    padding: 0 0.75rem;
    width: 8rem;
    min-width: 8rem;
    left: 50%;
    margin-top: 0.5rem;
    margin-left: auto;
    line-height: 2rem;
    text-align: center;
    color: #ECECEC;
    border: 0.0625rem solid #FFFFFF;
    border-radius: 0.25rem;
    font-weight: bold;
}

input.button-large {
    width: 14rem;
    min-width: 14rem;
    line-height: 2.5rem;
}

input.button-color-blue {
    background-color: #0099FF;
}

input.button-color-red {
    background-color: #D84A38;
}

input.radio {
    margin-left: 0.5rem;
}

div.overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #FFFFFF;
    opacity: 0.8;
    z-index: 50;
}

::-webkit-scrollbar {
    display: none;
}

div.action-form {
    overflow-y: auto;
    overflow-x: hidden;
    -ms-overflow-style: none;
    max-height: 40rem;
    width: 39rem;
    top: 50%;
    left: 50%;
    margin: 1.25rem auto 1.25rem -22rem;
    padding: 1.25rem 2.5rem 1rem 2.5rem;
    background: #FFFFFF;
    border: 0.0625rem solid #ccc;
    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.24);
    border-radius: 0.25rem;
    position: fixed;
    z-index: 89;
}

div.action-form-close {
    display: inline-block;
    position: absolute;
    margin-left: 39.75rem;
    margin-top: -0.75rem;
    color: #555555;
}

div.action-form-close:hover {
    cursor: pointer;
    color: #000000;
}

textarea.report-problem {
    margin-top: 0.25rem;
    width: 100%;
    height: 15rem;
}

textarea.submit-source {
    font-family: "Consolas", "Ubuntu Mono", "Courier New", monospace;
    width: 98%;
    height: 22.5rem;
    font-size: 0.9375rem;
    white-space: pre-wrap;
    padding: 1%;
}

input.news-form-title {
    margin-top: 0.5rem;
    width: 100%;
    height: 1.5rem;
    font-size: 1.25rem;
    font-weight: bold;
    text-align: center;
    border: none;
}

input.news-form-date {
    width: 6.25rem;
    height: 1rem;
    font-size: 0.75rem;
    text-align: right;
    font-style: italic;
    border: none;
}

textarea.news-form-content {
    width: 100%;
    height: 21rem;
}

div.message {
    position: fixed;
    width: 31rem;
    top: 7rem;
    left: 50%;
    margin-left: -15.5rem;
    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.24);
    border-radius: 1rem;
    z-index: 100;
    background-color: #0099FF;
}

div.message-info {
    background-color: #45B891;
}

div.message-error {
    background-color: #D84A38;
}

div.message-content {
    line-height: 2rem;
    vertical-align: middle;
    padding: 0 0.75rem 0 1rem;
}

div.message-icon {
    color: #FFFFFF;
    display: inline-block;
}

div.message-text {
    padding-left: 0.25rem;
    display: inline-block;
    color: #FFFFFF;
}

div.message-close {
    display: inline-block;
    float: right;
    color: #FFFFFF;
    cursor: pointer;
}

div.fade-in {
    animation-name: fade-in;
    animation-duration: 0.3s;
    opacity: 1;
}

div.fade-out {
    animation-name: fade-out;
    animation-duration: 0.3s;
    opacity: 0;
}

div.fade-in-overlay {
    animation-name: fade-in-overlay;
    animation-duration: 0.3s;
    opacity: 0.8;
}

div.fade-out-overlay {
    animation-name: fade-out-overlay;
    animation-duration: 0.3s;
    opacity: 0;
}

@keyframes fade-in {
    from {opacity: 0;}
    to {opacity: 1;}
}

@keyframes fade-out {
    from {opacity: 1;}
    to {opacity: 0;}
}

@keyframes fade-in-overlay {
    from {opacity: 0;}
    to {opacity: 0.8;}
}

@keyframes fade-out-overlay {
    from {opacity: 0.8;}
    to {opacity: 0;}
}

table.default {
    width: 100%;
    line-height: 1.75rem;
}

table.default th {
    font-weight: bold;
    text-align: center;
    color: #FFFFFF;
    background-color: #0099FF;
    line-height: 2rem;
    border-radius: 0.125rem;
}

table.default td {
    text-align: center;
    border-radius: 0.125rem;
    padding: 0 0.125rem;
}

table.default tr:nth-child(odd) {
    background: #F9F9F9;
}

table.red th {
    background-color: #DD4337;
}

table.green th {
    background-color: #129D5A;
}

table.blue th {
    background-color: #0099FF;
}
/* ... */

